[tool.poetry]
name = "maintenance"
version = "0.1.0"
description = ""
authors = ["Rémy <remy.nicolai@gmail.com>"]
packages = [{ include = "test.py"} ]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.33.9"
pdoc = "^14.1.0"
neo4j = "^5.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
